[gd_scene load_steps=30 format=2]

[ext_resource path="res://GUI/Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Floor/EnemyFloor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Collectables/CollectableStar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sound/GameMusic.wav" type="AudioStream" id=5]
[ext_resource path="res://GUI/HUD/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Game/EnemiesBatchPatrol.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/MoonFloor.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Game/EnemiesBatchPatrol2.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Game/EnemiesBatchPatrol3.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Game/EnemyActivator.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Moon.png" type="Texture" id=12]
[ext_resource path="res://Enemies/Battleship/BattleshipEnsemble.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Game/EnemyCaptainSpeaking.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Game/ActivableEmiter.gd" type="Script" id=15]
[ext_resource path="res://Enemies/Meteor/EnemyMeteor.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Game/GameScene.gd" type="Script" id=17]
[ext_resource path="res://Assets/Sound/BossMusic.wav" type="AudioStream" id=18]
[ext_resource path="res://Scenes/Game/BulletLimits.gd" type="Script" id=19]
[ext_resource path="res://Scenes/Game/EnemyCaptainDefeated.tscn" type="PackedScene" id=20]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.87504, 56 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.87504, 48 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.87504, 120 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.87504, 56 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.87504, 48 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6.87504, 48 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6.87504, 48 )

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=9]

[node name="GameScene" type="Node"]
script = ExtResource( 17 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 200, 146 )
texture = ExtResource( 12 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 172, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 0, 144 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 344, 144 )
texture = ExtResource( 8 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 48, 90 )
ini_max_health = 10

[node name="EnemyActivator" parent="." instance=ExtResource( 11 )]
position = Vector2( 282, 84 )
collision_mask = 16

[node name="PlayerLimits" type="Node2D" parent="EnemyActivator"]
position = Vector2( -283, -84 )

[node name="StaticBody2D" type="StaticBody2D" parent="EnemyActivator/PlayerLimits"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyActivator/PlayerLimits/StaticBody2D"]
position = Vector2( 34, 88 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="EnemyActivator/PlayerLimits/StaticBody2D"]
position = Vector2( 269, 90 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EnemyActivator/PlayerLimits/StaticBody2D"]
position = Vector2( 152, 34.7499 )
rotation = 1.57079
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="EnemyActivator/PlayerLimits/StaticBody2D"]
position = Vector2( 154, 136 )
rotation = 1.57079
shape = SubResource( 4 )

[node name="BulletLimits" type="Node2D" parent="EnemyActivator"]
position = Vector2( -283, -84 )
script = ExtResource( 19 )

[node name="Area2D" type="Area2D" parent="EnemyActivator/BulletLimits"]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyActivator/BulletLimits/Area2D"]
position = Vector2( 29, 88 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="EnemyActivator/BulletLimits/Area2D"]
position = Vector2( 276, 90 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EnemyActivator/BulletLimits/Area2D"]
position = Vector2( 152, 24.7499 )
rotation = 1.57079
scale = Vector2( 1, 2.56 )
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="EnemyActivator/BulletLimits/Area2D"]
position = Vector2( 154, 151 )
rotation = 1.57079
scale = Vector2( 1, 2.8 )
shape = SubResource( 8 )

[node name="Camera2D" parent="EnemyActivator" instance=ExtResource( 1 )]

[node name="Collectables" type="Node" parent="."]

[node name="Stars" type="Node2D" parent="Collectables"]
position = Vector2( 1, 11 )

[node name="Line2" type="Node2D" parent="Collectables/Stars"]
position = Vector2( 57, 0 )

[node name="CollectableStar" parent="Collectables/Stars/Line2" instance=ExtResource( 4 )]
position = Vector2( 319, 89 )

[node name="CollectableStar2" parent="Collectables/Stars/Line2" instance=ExtResource( 4 )]
position = Vector2( 319, 76 )

[node name="CollectableStar3" parent="Collectables/Stars/Line2" instance=ExtResource( 4 )]
position = Vector2( 319, 63 )

[node name="CollectableStar4" parent="Collectables/Stars/Line2" instance=ExtResource( 4 )]
position = Vector2( 319, 50 )

[node name="LineHorizontal" type="Node2D" parent="Collectables/Stars"]
position = Vector2( 236, 0 )

[node name="CollectableStar" parent="Collectables/Stars/LineHorizontal" instance=ExtResource( 4 )]
position = Vector2( 335, 76 )

[node name="CollectableStar2" parent="Collectables/Stars/LineHorizontal" instance=ExtResource( 4 )]
position = Vector2( 319, 76 )

[node name="CollectableStar3" parent="Collectables/Stars/LineHorizontal" instance=ExtResource( 4 )]
position = Vector2( 350, 76 )

[node name="CollectableStar4" parent="Collectables/Stars/LineHorizontal" instance=ExtResource( 4 )]
position = Vector2( 366, 76 )

[node name="Circle" type="Node2D" parent="Collectables/Stars"]
position = Vector2( 123, 0 )

[node name="CollectableStar" parent="Collectables/Stars/Circle" instance=ExtResource( 4 )]
position = Vector2( 328, 89 )

[node name="CollectableStar8" parent="Collectables/Stars/Circle" instance=ExtResource( 4 )]
position = Vector2( 356, 89 )

[node name="CollectableStar2" parent="Collectables/Stars/Circle" instance=ExtResource( 4 )]
position = Vector2( 319, 76 )

[node name="CollectableStar7" parent="Collectables/Stars/Circle" instance=ExtResource( 4 )]
position = Vector2( 362, 76 )

[node name="CollectableStar3" parent="Collectables/Stars/Circle" instance=ExtResource( 4 )]
position = Vector2( 328, 63 )

[node name="CollectableStar6" parent="Collectables/Stars/Circle" instance=ExtResource( 4 )]
position = Vector2( 355, 63 )

[node name="CollectableStar4" parent="Collectables/Stars/Circle" instance=ExtResource( 4 )]
position = Vector2( 341, 50 )

[node name="CollectableStar5" parent="Collectables/Stars/Circle" instance=ExtResource( 4 )]
position = Vector2( 341, 100 )

[node name="Meteors" type="Node2D" parent="Collectables"]

[node name="EnemyMeteor" parent="Collectables/Meteors" instance=ExtResource( 16 )]
position = Vector2( 315, -22 )

[node name="EnemyMeteor2" parent="Collectables/Meteors" instance=ExtResource( 16 )]
position = Vector2( 440, -23 )

[node name="EnemyMeteor3" parent="Collectables/Meteors" instance=ExtResource( 16 )]
position = Vector2( 541, -22 )

[node name="EnemyMeteor4" parent="Collectables/Meteors" instance=ExtResource( 16 )]
position = Vector2( 597, -23 )

[node name="EnemyMeteor5" parent="Collectables/Meteors" instance=ExtResource( 16 )]
position = Vector2( 638, -23 )

[node name="EnemyMeteor6" parent="Collectables/Meteors" instance=ExtResource( 16 )]
position = Vector2( 686, -23 )

[node name="EndLevel" type="Node2D" parent="."]
position = Vector2( 1300, 0 )

[node name="ActivatorEnemyCaptainSpeaking" type="Area2D" parent="EndLevel"]
position = Vector2( -1300, 0 )
collision_layer = 16
collision_mask = 0
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndLevel/ActivatorEnemyCaptainSpeaking"]
position = Vector2( 812, 74 )
shape = SubResource( 1 )

[node name="StopActivatorMovement" type="Area2D" parent="EndLevel"]
position = Vector2( -1300, 0 )
collision_layer = 16
collision_mask = 0
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndLevel/StopActivatorMovement"]
position = Vector2( 1016, 74 )
shape = SubResource( 9 )

[node name="BattleshipEnsemble" parent="EndLevel" instance=ExtResource( 13 )]
position = Vector2( -342, 69 )

[node name="EnemyCaptainSpeaking" parent="EndLevel" instance=ExtResource( 14 )]

[node name="EnemyCaptainDefeated" parent="EndLevel" instance=ExtResource( 20 )]

[node name="Enemies" type="Node" parent="."]

[node name="EnemiesPatrol" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 351, 74 )

[node name="EnemiesPatrol2" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 660, 53 )

[node name="EnemiesPatrol3" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 661, 101 )

[node name="EnemiesPatrol4" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 525, 94 )

[node name="EnemiesPatrol5" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 581, 75 )

[node name="EnemiesPatrol6" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 690, 75 )

[node name="EnemiesPatrol7" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 733, 75 )

[node name="EnemiesBatchPatrol2" parent="Enemies" instance=ExtResource( 9 )]
position = Vector2( 409, 61 )

[node name="EnemiesBatchPatrol3" parent="Enemies" instance=ExtResource( 10 )]
position = Vector2( 446, 87 )

[node name="EnemiesBatchPatrol4" parent="Enemies" instance=ExtResource( 10 )]
position = Vector2( 486, 67 )

[node name="EnemiesFloor" type="Node2D" parent="Enemies"]
position = Vector2( 128, 3 )

[node name="EnemyFloor2" parent="Enemies/EnemiesFloor" instance=ExtResource( 2 )]
position = Vector2( 212, 134 )
ini_max_health = 5
damage_on_collision = 100

[node name="EnemiesFloor2" type="Node2D" parent="Enemies"]
position = Vector2( 273, 0 )

[node name="EnemyFloor" parent="Enemies/EnemiesFloor2" instance=ExtResource( 2 )]
position = Vector2( 200, 134 )
damage_on_collision = 100

[node name="EnemyFloor2" parent="Enemies/EnemiesFloor2" instance=ExtResource( 2 )]
position = Vector2( 212, 134 )
damage_on_collision = 100

[node name="EnemiesFloor3" type="Node2D" parent="Enemies"]
position = Vector2( 446, 0 )

[node name="EnemyFloor" parent="Enemies/EnemiesFloor3" instance=ExtResource( 2 )]
position = Vector2( 200, 134 )
damage_on_collision = 100

[node name="EnemyFloor2" parent="Enemies/EnemiesFloor3" instance=ExtResource( 2 )]
position = Vector2( 212, 134 )
damage_on_collision = 100

[node name="EnemyFloor3" parent="Enemies/EnemiesFloor3" instance=ExtResource( 2 )]
position = Vector2( 224, 134 )
damage_on_collision = 100

[node name="AudioStreamPlayerGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="AudioStreamPlayerBoss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[connection signal="body_entered" from="EnemyActivator/BulletLimits/Area2D" to="EnemyActivator/BulletLimits" method="_on_Area2D_body_entered"]
[connection signal="activate" from="EndLevel/ActivatorEnemyCaptainSpeaking" to="." method="music_game_stop"]
[connection signal="activate" from="EndLevel/ActivatorEnemyCaptainSpeaking" to="EndLevel/EnemyCaptainSpeaking" method="perform"]
[connection signal="activate" from="EndLevel/StopActivatorMovement" to="EnemyActivator" method="stop"]
[connection signal="dead" from="EndLevel/BattleshipEnsemble" to="." method="music_boss_stop"]
[connection signal="dead" from="EndLevel/BattleshipEnsemble" to="EndLevel/EnemyCaptainDefeated" method="perform"]
[connection signal="animation_finished" from="EndLevel/EnemyCaptainSpeaking" to="." method="music_boss_start"]

[editable path="EnemyActivator"]
